Fix overflow x

--- a/src/index.scss
+++ b/src/index.scss
@@ -14,4 +14,7 @@ html,
 body {
   margin: 0;
   padding: 0;
+  height: auto;
+  width: 100vw;
+  overflow-x: hidden;
 }
